<resources>
    <string name="app_name">admodule</string>
    <string name="baidu_action">打开积分墙</string>


    <string name="action_settings">设置</string>
    <string name="btn_show_offerswall">展示积分墙(全屏)</string>
    <string name="btn_show_offerswall_dialog">展示积分墙(对话框)</string>
    <string name="btn_show_shareswall">展示分享墙(全屏)</string>
    <string name="btn_show_shareswall_dialog">展示分享墙(对话框)</string>
    <string name="btn_award_points">奖励10积分</string>
    <string name="btn_spend_points">消费20积分</string>
    <string name="btn_get_online_config">获取有米在线参数</string>
    <string name="btn_check_reach_ntp_time">是否达到指定网络时间</string>
    <string name="btn_check_ad_config">检查广告配置</string>


    <string name="hello_world">Hello world!</string>
    <string name="result">Result</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="query">Query</string>
    <string name="use">Use 10 Point</string>


    <string name="offerList">Offers</string>
    <string name="popAd">PopAd</string>
    <string name="shareOfferList">ShareOffer</string>
    <string name="gameOfferList">GameOffer</string>
    <string name="appOfferList">AppOffer</string>
    <string name="spendPoints">SpendPoints(-10)</string>
    <string name="awardPoints">AwardPoints(+10)</string>
    <string name="feedback">Feedback</string>
    <string name="moreApps">MoreApps(list)</string>
    <string name="ownAppDetail">OwnApp(one)</string>
    <string name="diyAd">DiyAd</string>
    <string name="diyAdList">DiyAdList</string>
    <string name="checkUpdate">CheckUpdate</string>
</resources>
